--- a/src/components/todos.css
+++ b/src/components/todos.css
@@ -24,8 +24,14 @@
     -webkit-text-decoration-line: line-through; /* Safari */
    text-decoration-line: line-through; 
   text-decoration-color: lightpink ;
+  border: none
 }
-
+.input-todo{
+    outline: none;
+    background-color: none;
+    text-decoration: none;
+    border: none;
+}
 .btn-delete{
     color: rgb(248, 73, 73)
 }
